# Sciens

./: CMakeLists.txt  main.cpp
examples/: example.scns
src/: compiler.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
